add shimmer setup and compose network

--- a/platform/docker/confluent-3.0.0/docker-compose.yml
+++ b/platform/docker/confluent-3.0.0/docker-compose.yml
@@ -72,6 +72,9 @@ services:
   # Hadoop Platform Services #
   #--------------------------#
 
-##networks:
-##    fullstack:
+#---------------------#
+# composition network #
+#---------------------#
+networks:
+  fullstacknet:
 
