add restart:always policy to schema-registry as it fails if kafka isn't up, links also req on shimmer console

--- a/platform/docker/radar-stack/docker-compose.yml
+++ b/platform/docker/radar-stack/docker-compose.yml
@@ -20,8 +20,8 @@ services:
     image: openmhealth/shimmer-console
     ports:
       - "8083:8083"
-    depends_on:
-      - resourceserver
+    links:
+      - resourceserver:resource-server
   
   #-----------------------------#
   # Confluent Platform Services #
@@ -49,6 +49,7 @@ services:
     depends_on:
       - "kafka"
       - "zookeeper"
+    restart: always
     ports:
       - "8081:8081"
     environment:
@@ -75,6 +76,6 @@ services:
 #---------------------#
 # composition network #
 #---------------------#
-networks:
-  fullstacknet:
+#networks:
+#  fullstacknet:
 
